@@ -10,7 +10,8 @@ dependencies {
 
     testImplementation("org.junit.jupiter:junit-jupiter-api")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
-    testImplementation("org.apache.logging.log4j:log4j-slf4j-impl")
+    testImplementation("org.apache.logging.log4j:log4j-slf4j2-impl")
+    testImplementation("org.apache.logging.log4j:log4j-core")
 
 }
 
@@ -19,6 +20,11 @@ description = "libnetty/Handler"
 tasks.test {
     // Use junit platform for unit tests.
     useJUnitPlatform()
+    // Fix for java 17
+    jvmArgs = listOf(
+        "--add-exports=java.base/sun.security.x509=ALL-UNNAMED",
+        "--add-exports=java.base/sun.security.pkcs=ALL-UNNAMED",
+    )
 }
 
 publishing {
